--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Despertar da Kundalini - Ativação Energética</title>
     <meta name="description" content="Ativação segura e guiada da energia Kundalini para expansão da consciência e despertar espiritual.">
+    <link rel="icon" href="asset/icon.ico" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
